--- a/_posts/2022-10-10-资源大全(不定时更新).md
+++ b/_posts/2022-10-10-资源大全(不定时更新).md
@@ -1,3 +1,13 @@
+---
+layout: post
+title: 资源导航集合
+date: 2022-10-10
+Author: 娄继涛
+categories: 资源
+tags: [导航,资源,素材]
+comments: true
+---
+
 今日热榜网 https://tophub.today/
 
 新闻导航网站 https://gosbook.cn/ 
