--- a/_posts/2023-04-17-【模板】xxx实战问题复盘.md
+++ b/_posts/2023-04-17-【模板】xxx实战问题复盘.md
@@ -1,3 +1,13 @@
+---
+layout: post
+title: 技术类写作模板——问题复盘
+date: 2023-04-17
+Author: 娄继涛
+categories: 文档
+tags: [文档,工具]
+comments: true
+---
+
 # 【技术类写作模板】[xxx]问题解决复盘
 
 ​																													作者：stevetao    时间：2023.03.03
