--- a/_posts/datax/2024-10-30-datax实际生产运用.md
+++ b/_posts/datax/2024-10-30-datax实际生产运用.md
@@ -1,3 +1,13 @@
+---
+layout: post
+title: Datax使用
+date: 2024-10-30
+Author: 娄继涛
+categories: 技术组件
+tags: [技术组件,数据采集,数仓建设]
+comments: true
+---
+
 ## 一、环境介绍
 
 通过datax将业务数据库oracle、mysql里的数据，抽取到hive库SRC贴源层的临时分区里，再通过Python脚本调起impala sql，将数据加工到SRC层增量分区，以及数仓其他层。
