--- a/_posts/datax/2024-10-30-datax简介和原理.md
+++ b/_posts/datax/2024-10-30-datax简介和原理.md
@@ -1,3 +1,13 @@
+---
+layout: post
+title: Datax简介
+date: 2024-10-30
+Author: 娄继涛
+categories: 技术组件
+tags: [技术组件,数据采集,数仓建设]
+comments: true
+---
+
 ## 1.DataX简介
 
 ### 1-1.项目地址
