--- a/_posts/flink/2022-03-22-flink学习笔记.md
+++ b/_posts/flink/2022-03-22-flink学习笔记.md
@@ -1,2 +1,12 @@
+---
+layout: post
+title: flink入门
+date: 2022-03-22
+Author: 娄继涛
+categories: 技术组件
+tags: [技术组件,数据加工,flink,流批一体]
+comments: true
+---
+
 ## 一、简介
 
