--- a/_posts/hive/2021-09-28-hive常用命令操作.md
+++ b/_posts/hive/2021-09-28-hive常用命令操作.md
@@ -1,3 +1,15 @@
+---
+layout: post
+title: Hive常用操作命令
+date: 2021-09-28
+Author: 娄继涛
+categories: 技术组件
+tags: [技术组件,HIVE,数仓建设]
+comments: true
+---
+
+
+
 **查看数据库：**  
 
 ```sql
