--- a/_posts/hive/2021-09-29-hive文件存储格式.md
+++ b/_posts/hive/2021-09-29-hive文件存储格式.md
@@ -1,3 +1,13 @@
+---
+layout: post
+title: Hive文件存储格式
+date: 2021-09-29
+Author: 娄继涛
+categories: 技术组件
+tags: [技术组件,HIVE,数仓建设]
+comments: true
+---
+
 #### Hive的常见文件存储格式
 
 在hive中，较常见的文件存储格式有：TextFile、SequenceFile、RcFile、ORC、Parquet、AVRO。默认的文件存储格式是TextFile。
