--- a/_posts/hive/2021-09-30-hive数仓知识库系列（二）.md
+++ b/_posts/hive/2021-09-30-hive数仓知识库系列（二）.md
@@ -1,3 +1,13 @@
+---
+layout: post
+title: Hive数仓知识库系列（二）
+date: 2021-09-30
+Author: 娄继涛
+categories: 技术组件
+tags: [技术组件,HIVE,数仓建设]
+comments: true
+---
+
 #### HIVE常用内置函数、高级函数、自定义函数
 
 **Hive自定义函数包括三种UDF、UDAF、UDTF**
