--- a/_posts/hive/2021-12-31-hive执行计划解读.md
+++ b/_posts/hive/2021-12-31-hive执行计划解读.md
@@ -1,3 +1,13 @@
+---
+layout: post
+title: Hive执行计划解读
+date: 2021-09-30
+Author: 娄继涛
+categories: 技术组件
+tags: [技术组件,HIVE,数仓建设]
+comments: true
+---
+
 ## 一、Hive执行计划解读
 
 **HIVE提供了EXPLAIN命令来展示一个查询的执行计划**,这个执行计划对于我们了解底层原理，hive 调优，排查数据倾斜等很有帮助
