--- a/_posts/sufa/2023-04-03-大数据常用算法.md
+++ b/_posts/sufa/2023-04-03-大数据常用算法.md
@@ -1,3 +1,13 @@
+---
+layout: post
+title: 大数据算法
+date: 2023-04-03
+Author: 娄继涛
+categories: 算法
+tags: [算法,机器学习,数据结构]
+comments: true
+---
+
 # 【大数据常用算法总结】
 
 ### 1、哈希分片
