--- a/_posts/2023-04-17-【模板】xx组件技术从入门到高级 .md
+++ b/_posts/2023-04-17-【模板】xx组件技术从入门到高级 .md
@@ -1,3 +1,13 @@
+---
+layout: post
+title: 技术类写作模板——XX从入门到高级
+date: 2023-04-17
+Author: 娄继涛
+categories: 文档
+tags: [文档,工具]
+comments: true
+---
+
 # 【技术类模板1】[xxx]技术组件从入门到高级
 
 ​																						作者：stevetao    时间：2021.12.26
