--- a/_posts/ETL/2021-08-11-Debezium安装部署.md
+++ b/_posts/ETL/2021-08-11-Debezium安装部署.md
@@ -1,3 +1,13 @@
+---
+layout: post
+title: Debezium安装部署
+date: 2021-08-11
+Author: 娄继涛
+categories: 技术组件
+tags: [技术组件,数据采集,数仓建设]
+comments: true
+---
+
 # 实时同步MySQL到Kafka的环境搭建
 
 Debezium是用于捕获变更数据的开源分布式平台。可以响应数据库的所有插入，更新和删除操作。
@@ -87,7 +97,7 @@ confluent platform分两个版本`Confluent Enterprise`和`Confluent Open Source
 
 **访问测试**： 通过使用`http://localhost:9021`来访问`Control Center`,如图。
 
-![](../blogimg/images/202108111526.png)
+![](../../blogimg/images/202108111526.png)
 
 ### 3) 自定义启动
 
