--- a/_posts/hive/2021-09-29-hive数仓知识库系列（一）.md
+++ b/_posts/hive/2021-09-29-hive数仓知识库系列（一）.md
@@ -1,3 +1,13 @@
+---
+layout: post
+title: Hive数仓知识库系列（一）
+date: 2021-09-29
+Author: 娄继涛
+categories: 技术组件
+tags: [技术组件,HIVE,数仓建设]
+comments: true
+---
+
 ### HIVE中数据值清洗和转换
 
 ### 一、基本数据类型
