--- a/_posts/hive/2021-10-01-hive数据知识库系列（三）.md
+++ b/_posts/hive/2021-10-01-hive数据知识库系列（三）.md
@@ -1,3 +1,13 @@
+---
+layout: post
+title: Hive数仓知识库系列（三）
+date: 2021-09-30
+Author: 娄继涛
+categories: 技术组件
+tags: [技术组件,HIVE,数仓建设]
+comments: true
+---
+
 ### 数据倾斜总结
 
 ![](../../blogImg/images/202110011138.png)
