--- a/_posts/sql/2024-10-30-hive常用sql结构.md
+++ b/_posts/sql/2024-10-30-hive常用sql结构.md
@@ -1,3 +1,13 @@
+---
+layout: post
+title: hive常用sql结构
+date: 2024-10-12
+Author: 娄继涛
+categories: sql
+tags: [数仓,hive，sql]
+comments: true
+---
+
 ## 一、存储方式
 
 ### 1.单分区全量数据存储
