--- a/_posts/product/2018-05-16-如何快速了解公司业务.md
+++ b/_posts/product/2018-05-16-如何快速了解公司业务.md
@@ -62,6 +62,10 @@ comments: true
 
 ![img](../../blogImg/images/202411261024.png)
 
+![img](../../blogImg/images/202411261112.png)
+
+
+
 ## 二、公司主营业务
 
 #### 2.1.梳理业务逻辑流程
@@ -100,6 +104,8 @@ comments: true
 
 那么，如何梳理业务呢？首先借用**用例**梳理出产品有什么大的功能。
 
+![img](../../blogImg/images/202411261110.png)
+
 从目标层、实现层到步骤层，将业务梳理出来。其次，用**流程图梳理业务**，先画出主流程，然后加入分支流程和异常流程，如果涉及到其他业务方的交互，加入**泳道图**进行梳理。
 
 梳理完业务后，不能保证自己梳理的是对的，是全的。还有比较重要一步是，给懂业务的人反讲自己的梳理。最好把业务、产品、研发都拉上。最后根据参与返讲人员的意见修正自己的梳理。
@@ -129,6 +135,12 @@ comments: true
 面：管理流程与流程之间的交互。
 
 ##### 2.2.2.后台业务流程交互
+
+对于复杂业务，产品流程中会牵涉多个角色，我们需要关注有哪些角色、角色之间的协同关系、工作场景、操作路径等。
+
+例如房产经纪人使用的直销系统，核心本质是一个客户管理的销售工具，我们首先对经纪人的日常工作流程进行梳理。为了帮助经纪人提升转化率也就是房客资源利用率，从购房分析、提供具体的购房方案、房源筛选匹配、到房屋营销建议、再到销售跟进、风险管控等整个流程，帮助经纪人优化应答时间、标准话术、沟通技巧、追踪频次、服务动作，并根据不同需求客户给出效率最优的接待服务方案，从而提升经纪人的作业效率与客户转化率，进而实现业绩增长。
+
+![img](../../blogImg/images/202411261114.png)
 
 页面上所有的商品信息都需要依赖业务后台进行支撑，通过后台可以获取到数据产品中所依赖的部分分析维度。若想让数据产品直接作用于业务，那么对接业务后台将会是一个重要输出方向。
 
